Bug 291757 - "work online/offline" menu entry is ambiguous
Summary: "work online/offline" menu entry is ambiguous
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-17 10:43 UTC by S. Burmeister
Modified: 2012-01-17 11:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2012-01-17 10:43:52 UTC
Version:           unspecified (using Devel) 
OS:                Linux

If one works online the menu entry shows "work offline", i.e. clicking on it will go into offline mode.

If one clicks on it it displays "x work online", i.e. a tick and "work online". This mediates that "work online" is enabled (ticked) – which is obviously wrong.

Reproducible: Always

Steps to Reproduce:
- Open the "file" menu in kmail2
- click on "work offline"

Actual Results:  
- menu entry switches to "x work online"

Expected Results:  
either "x work offline" or "work online" (without tick)
Comment 1 Laurent Montel 2012-01-17 11:56:42 UTC
Git commit a08e0eaf023ba5dec670b4e645aa3259a531393c by Montel Laurent.
Committed on 17/01/2012 at 12:56.
Pushed by mlaurent into branch 'master'.

Fix Bug 291757 - "work online/offline" menu entry is ambiguous

FIXED-IN: 4.8.1

M  +1    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/a08e0eaf023ba5dec670b4e645aa3259a531393c
Comment 2 Laurent Montel 2012-01-17 11:57:20 UTC
Git commit 95a682c5a33f9e27e4dc0dcafc9ebe0d65b7a3b2 by Montel Laurent.
Committed on 17/01/2012 at 12:56.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 291757 - "work online/offline" menu entry is ambiguous

FIXED-IN: 4.8.1
(cherry picked from commit a08e0eaf023ba5dec670b4e645aa3259a531393c)

M  +1    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/95a682c5a33f9e27e4dc0dcafc9ebe0d65b7a3b2