Fix Bug 291757 - "work online/offline" menu entry is ambiguous

FIXED-IN: 4.8.1
BUG: 291757